<resources>
    <string name="app_name">Inventory</string>
    <string name="homeTitle">Home</string>
    <string name="inventory">Inventory</string>
    <string name="pos">POS</string>
    <string name="orders">Orders</string>
    <string name="report">Reports</string>
    <string name="tabPosition">TabPosition</string>
    <string name="expiredDuration">Expired(1 month)</string>
    <string name="inventoryAll">All</string>
    <string name="expired">Expired</string>
    <string name="sale">Sale</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="resend_otp"><u>Didn\'t get otp? Resend</u></string>
    <string name="verify_otp">Verify your number</string>
    <string name="verify_number_text">Please verify your number</string>
    <string name="verify_otp_text">OTP has been sent to your number. Please check your message box and submit.</string>
    <string name="verify_number">Enter OTP</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drugModel">DrugModel</string>
    <string name="isModify">IsModify</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="theme">Theme</string>
    <string name="chooseTheme">Choose theme</string>
    <string name="dafault">Default</string>
    <string name="cbUncheckColor">#e0e0e0</string>
    <string name="enterMobileNo">Enter mobile no</string>
    <string name="enterMobileNoTenDigit">Enter last 10 digits og mobile no</string>
    <string name="enterNickName">Enter your name</string>
    <string name="enterValidEmail">Enter a valid email</string>
    <string name="submit">Done</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="update">Update</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="selectColor">Please select color</string>
    <string name="addMedicine">Add Medicine</string>
    <string name="drugName">Drug Name</string>
    <string name="drugMRP">MRP</string>
    <string name="drugQuantity">Quantity</string>
    <string name="drugDiscount">Discount</string>
    <string name="drugExpiryDate">Expiry Date</string>
    <string name="drugBatchNumber">Quantity</string>
    <string name="drugTransactionDate">Transaction Date</string>
    <string name="drugManufacturer">Drug Manufacturer</string>
    <string name="batchNumber">Batch Number</string>
    <string name="percentageSymbol">%</string>
    <string name="rs">Rs</string>
    <string name="resultOf">Result of</string>
    <string name="enterDrugName">Enter drug name</string>
    <string name="enterDrugMRP">Enter MRP</string>
    <string name="enterDrugQuantity">Enter quantity</string>
    <string name="enterDrugDiscount">Enter discount</string>
    <string name="enterDrugManufacturer">Enter drug manufacturer</string>
    <string name="enterBatchNumber">Enter batch number</string>
    <string name="chooseExpiryDate">Choose expiry date</string>
    <string name="enterValidQuantity">Enter a valid quantity</string>
    <string name="discountLimit100">Discount can not be more than 100%</string>
    <string name="quantityStockLimit">Your quantity exceeds stock quantity</string>
    <string name="itemOutOfStock">out of stock , please add it to your inventory first</string>
    <string name="itemExistInList">is in list and net quanity exceeds stock quantity</string>
    <string name="injection">Injection</string>
    <string name="tablet">Tablets</string>
    <string name="capsules">Capsules</string>
    <string name="cream">Cream</string>
    <string name="syrup">Syrup</string>
    <string name="drops">Drops</string>
    <string name="liquid">Liquid</string>
    <string name="ointment">Ointment</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="popupcolor_1">#ff6f00</string>
    <string name="popupcolor_2">#dd2c00</string>
    <string name="popupcolor_3">#d50000</string>
    <string name="popupcolor_4">#c51162</string>
    <string name="popupcolor_5">#9c27b0</string>
    <string name="popupcolor_6">#6a1b9a</string>
    <string name="popupcolor_7">#673ab7</string>
    <string name="popupcolor_8">#311b92</string>
    <string name="popupcolor_9">#1976d2</string>
    <string name="popupcolor_10">#00838f</string>
    <string name="popupcolor_11">#006064</string>
    <string name="popupcolor_12">#004d40</string>
    <string name="popupcolor_13">#2e7d32</string>
    <string name="popupcolor_14">#5d4037</string>
    <string name="popupcolor_15">#3e2723</string>
    <string name="popupcolor_16">#424242</string>
    <string name="popupcolor_17">#455a64</string>
    <string name="popupcolor_18">#263238</string>
    <string name="masterDB">MasterDB</string>
    <string name="inventoryDB">InventoryDB</string>
    <string name="pleaseWait">Please wait...</string>
    <string name="check_internet">Check your internet connection</string>
    <string name="internet_slow">Sorry, it seems your internet connection is slow, we could not update your data, please try again.</string>
    <string name="internet_gone">Sorry, it seems your internet connection is gone, we could not update your data, please try again.</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="pleaseEnterOTP">Please enter OTP</string>
    <string name="pleaseTryLater">Please try again Later</string>
    <string name="conTinue">Continue</string>
    <string name="version">Version :</string>
    <string name="SDCardNotAvailable">Please turn off USB storage or insert your SD card and try again</string>
    <string name="permission_unavailable">%s is not available</string>
    <string name="takeNewPhoto">Take New Photo</string>
    <string name="chooseFromGallery">Choose from Gallery</string>
    <string name="remove">Remove</string>
    <string name="selectImageToUpload">Select picture to upload</string>
    <string name="cameraNeverAskAgain">CameraNeverAskAgain</string>
    <string name="phoneStateNeverAskAgain">PhoneStateAskAgain</string>
    <string name="gpsNeverAskAgain">GPSNeverAskAgain</string>
    <string name="writeExternalStorageNeverAskAgain">WriteExternalStorageNeverAskAgain</string>
    <string name="internal_error">Internal error</string>
    <string name="memory_low">Device is low on memory! Please clear some files and retry.</string>
    <string name="gpsDisableEnableText">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="statusYesBtn">Yes, thanks</string>
    <string name="statusNoBtn">No, later</string>
    <string name="upload_fail">Uploading failed</string>
    <string name="upload_success">Succesfully uploaded</string>
    <string name="camera">Camera</string>
    <string name="profileActivity">ProfileActivity</string>
    <string name="profileEditActivity">ProfileEditActivity</string>
    <string name="font_user">&#xE876;</string>
    <string name="searchMedicine">Search medicine</string>
    <string name="customerName">Customer Name</string>
    <string name="customerMobile">Customer Mobile</string>
    <string name="patientName">Patient Name (Optional)</string>
    <string name="gender">Gender (Optional)</string>
    <string name="age">Age (Optional)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enterCustomerName">Enter customer name</string>
    <string name="enterCustomerMobile">Enter customer mobile no</string>
    <string name="enterValidCustomerMobile">Enter a valid mobile no</string>
    <string name="addDrugToList">Please add medicine first</string>
    <string name="order">Orders</string>
    <string name="orderNo">Order No</string>
    <string name="createdOn">Created on</string>
    <string name="orderTotal">Order Total</string>
    <string name="orderTotalActual">Order Total Actual</string>
    <string name="orderTotalDiscount">Order Total Discount</string>
    <string name="tax">Tax</string>
    <string name="slNo">SN</string>
    <string name="quantity">Qty</string>
    <string name="disCount">Disc</string>
    <string name="subTotal">Sub Total</string>
    <string name="total">Total</string>
    <string name="availableQuantity">Available Quantity</string>
    <string name="semicolon">:</string>
    <string name="dash">-</string>
    <string name="plus">+</string>
    <string name="splitterCharacter">\\:</string>
    <string name="searchOrderByMobile">Search by customer name/mobile</string>
    <string name="searchDrugByName">Search by drug name</string>
    <string name="today">Today</string>
    <string name="sales">Sales</string>
    <string name="sharevia">Share via</string>
    <string name="isNotEdiatable">IsNotEdiatable</string>
</resources>