<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/com.zibmi"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">


        <LinearLayout
            android:id="@+id/colorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/enterNameET_Hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/enterNameET"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:drawableBottom="@android:color/transparent"
                    android:ellipsize="end"
                    android:ems="10"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textAutoComplete|textMultiLine"
                    android:singleLine="true"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/body" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/enterMobileET_Hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/enterMobileET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:drawableBottom="@android:color/transparent"
                    android:ellipsize="end"
                    android:ems="10"
                    android:hint="@string/mobile"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/body" />

            </android.support.design.widget.TextInputLayout>


            <com.inventory.NewUi.RobotoTextView
                android:id="@+id/submitTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:text="@string/submit"
                android:textColor="@color/White"
                android:textSize="@dimen/header_20sp"
                app:typeface="robotoRegular" />


        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>