<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/fragment2_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/verify_otp"
            android:textColor="@color/Black"
            android:textSize="@dimen/header_18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/verify_number_text"
            android:textColor="@color/Black"
            android:textSize="@dimen/body"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/simpleSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/enter_phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toLeftOf="@+id/right_image"
                android:background="@null"
                android:focusable="true"
                android:hint="Enter your number"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/Black"
                android:textColorHint="@color/Gray"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/header_18sp" />

            <RelativeLayout
                android:id="@+id/right_image"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">

                <ImageView
                    android:id="@+id/right_image_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/vector_check_right_white_icon"
                    android:backgroundTint="#33000000" />
            </RelativeLayout>


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/enter_phone_number"
                android:layout_marginTop="3dp"
                android:background="@color/main_color_grey_500" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment3_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/verify_number"
            android:textColor="@color/Black"
            android:textSize="@dimen/header_24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/verify_otp_text"
            android:textColor="@color/Black"
            android:textSize="@dimen/header" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/phone_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/edit_phone_number"
                android:gravity="center_vertical"
                android:text="(+91) 8885109868"
                android:textColor="@color/Black"
                android:textSize="@dimen/header" />


            <ImageView
                android:id="@+id/edit_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/vector_edit_white_icon"
                android:backgroundTint="@color/black_65" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <com.inventory.Login.CodeInput
                android:id="@+id/code_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                />

        </RelativeLayout>

        <TextView
            android:id="@+id/otp_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/resend_otp"
            android:textColor="@color/Black"
            android:textSize="@dimen/body" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle_sharp_corner">

        <TextView
            android:id="@+id/bottom_bar_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/conTinue"
            android:textColor="@color/White"
            android:textSize="@dimen/header" />

        <TextView
            android:id="@+id/bottom_bar_textview2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/conTinue"
            android:textColor="@color/White"
            android:textSize="@dimen/header"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progress_loading_otp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progress_loading"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:visibility="gone" />
    </RelativeLayout>
</RelativeLayout>
