<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/themeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.inventory.NewUi.RobotoTextView
                android:id="@+id/themeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/theme"
                android:textColor="@color/main_color_grey_900"
                android:textSize="@dimen/header_20sp"
                app:typeface="robotoRegular" />


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/themeTV"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/radioButton_Default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/White"
                    android:checked="false"
                    android:paddingLeft="5dp"
                    android:text="@string/dafault"
                    android:textColor="@color/main_color_grey_900" />

                <RadioButton
                    android:id="@+id/radioButton_ChooseTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/White"
                    android:checked="false"
                    android:paddingLeft="5dp"
                    android:text="@string/chooseTheme"
                    android:textColor="@color/main_color_grey_900" />

            </RadioGroup>


            <RelativeLayout
                android:id="@+id/colorLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/themeTV"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp">

                <RelativeLayout
                    android:id="@+id/colorLayoutDafault"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/circle_shape">

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/colorLayoutChooseTheme"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/colorLayoutDafault"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/circle_shape">


                </RelativeLayout>


            </RelativeLayout>


        </RelativeLayout>

    </RelativeLayout>


</LinearLayout>